# webapi.event+/Repositories/ComentariosEventoRepository.cs
@@ -75,35 +75,7 @@ namespace webapi.event_.Repositories
         }
 
         
-        public ComentariosEvento BuscarPoridEvento(Guid idUsuario,Guid idEvento)
-        {
-            try
-            {
-                return _context.ComentariosEvento
-                    .Select(c => new ComentariosEvento
-                    {
-                        Descricao = c.Descricao,
-                        Exibe = c.Exibe,
-                        IdUsuario = c.IdUsuario,
-                        IdEvento = c.IdEvento,
-
-                        Usuario = new Usuario
-                        {
-                            Nome = c.Usuario!.Nome
-                        },
-
-                        Evento = new Evento
-                        {
-                            NomeEvento = c.Evento!.NomeEvento,
-                        }
-
-                    }).FirstOrDefault(c => c.IdUsuario == idUsuario && c.IdEvento == idEvento)!;
-            }
-            catch (Exception)
-            {
-                throw;
-            }
-        }
+ 
 
 
         public ComentariosEvento BuscarPoridEvento(Guid idEvento)
@@ -129,6 +101,36 @@ namespace webapi.event_.Repositories
                         }
 
                     }).FirstOrDefault(c => c.IdEvento == idEvento)!;
+            }
+            catch (Exception)
+            {
+                throw;
+            }
+        }
+
+        public ComentariosEvento BuscarPoridEventoExibe(Guid idEvento)
+        {
+            try
+            {
+                return _context.ComentariosEvento
+                    .Select(c => new ComentariosEvento
+                    {
+                        Descricao = c.Descricao,
+                        Exibe = c.Exibe,
+                        IdUsuario = c.IdUsuario,
+                        IdEvento = c.IdEvento,
+
+                        Usuario = new Usuario
+                        {
+                            Nome = c.Usuario!.Nome
+                        },
+
+                        Evento = new Evento
+                        {
+                            NomeEvento = c.Evento!.NomeEvento,
+                        }
+
+                    }).FirstOrDefault(c => c.IdEvento == idEvento && c.Exibe == true)!;
             }
             catch (Exception)
             {
